--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,19 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  go_router: ^14.8.1
   l: ^5.0.0
   package_info_plus: ^8.3.0
   supabase_flutter: ^2.8.4
   yx_scope: ^1.0.2
+  yx_scope_flutter: ^1.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  yx_scope_linter: any
+  custom_lint: ^0.5.3
 
 flutter:
   uses-material-design: true
