--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_dotenv: ^5.1.0
   l: ^5.0.0
   package_info_plus: ^8.3.0
   supabase_flutter: ^2.8.4
