--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   drift: ^2.26.0
   drift_flutter: ^0.2.4
   path_provider: ^2.1.5
+  connectivity_plus: ^6.1.3
+  http: ^1.3.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -33,6 +36,7 @@ dev_dependencies:
   json_serializable: ^6.8.0
   json_annotation: ^4.9.0
   build_runner: ^2.4.13
+  mockito: ^5.4.5
 
 flutter:
   uses-material-design: true
