--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.0
   flutter_dotenv: ^5.1.0
+  flutter_svg: ^2.0.10
   go_router: ^14.8.1
   l: ^5.0.0
   package_info_plus: ^8.3.0
@@ -40,9 +41,19 @@ dev_dependencies:
   json_annotation: ^4.9.0
   build_runner: ^2.4.13
   mockito: ^5.4.5
+  flutter_gen_runner: ^5.5.0+1
+
+flutter_gen:
+  output: lib/core/resources/
+  line_length: 120
+
+  # Optional
+  integrations:
+    flutter_svg: true
 
 flutter:
   uses-material-design: true
   generate: true
   assets:
     - .env
+    - assets/navbar_icons/
