--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   connectivity_plus: ^6.1.3
   http: ^1.3.0
   intl: ^0.19.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
