--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dev_dependencies:
   build_runner: ^2.4.13
   mockito: ^5.4.5
   flutter_gen_runner: ^5.5.0+1
+  home_widget: ^0.7.0
 
 flutter_gen:
   output: lib/core/resources/
