--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
-name: CI
+name: Example-ci
 
 on:
   push:
     branches:
-      - ci/cd
+      - main
 
 jobs:
   flutter-analyze:
@@ -30,6 +30,16 @@ jobs:
           echo "    non_type_as_type_argument: ignore" >> analysis_options.yaml
           echo "    undefined_class: ignore" >> analysis_options.yaml
           echo "    duplicate_ignore: ignore" >> analysis_options.yaml
+          echo "    uri_has_not_been_generated: ignore" >> analysis_options.yaml
+          echo "    type_argument_not_matching_bounds: ignore" >> analysis_options.yaml
+          echo "    undefined_identifier: ignore" >> analysis_options.yaml
+          echo "    undefined_getter: ignore" >> analysis_options.yaml
+          echo "    undefined_method: ignore" >> analysis_options.yaml
+          echo "    undefined_prefixed_name: ignore" >> analysis_options.yaml
+          echo "    undefined_function: ignore" >> analysis_options.yaml
+          echo "    unused_import: ignore" >> analysis_options.yaml
+          echo "    deprecated_member_use: ignore" >> analysis_options.yaml
+          echo "    asset_does_not_exist: ignore" >> analysis_options.yaml
       - run: flutter analyze --no-pub --no-fatal-infos --no-fatal-warnings .
       - run: dart format --set-if-changed .
 
