--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,1 +1,2 @@
-include: package:flutter_lints/flutter.yaml
+# include: package:flutter_lints/flutter.yaml
+include: package:surf_lint_rules/analysis_options.yaml
