--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.5.3
   percent_indicator: ^4.2.4
+  lottie: ^3.0.0
+  animated_text_kit: ^4.2.2
+
 
 dev_dependencies:
   flutter_test:
